@@ -8,7 +8,7 @@ class T_215X_codec_extradata_avi < Test
   def run
     merge("data/avi/extradata.avi")
     hash = hash_file(tmp) + "-"
-    xtr_tracks(tmp, "1:#{tmp}-x.avi")
+    xtr_tracks(tmp, "0:#{tmp}-x.avi")
     hash += hash_file("#{tmp}-x.avi")
     return hash
   end
