@@ -6,10 +6,10 @@ class T_263ass_missing_text_in_format < Test
   end
 
   def run
-    xtr_tracks "data/mkv/ass_missing_text_in_format.mkv", "3:#{tmp}3 4:#{tmp}4"
-    result = hash_file(tmp + "3") + "-" + hash_file(tmp + "4")
+    xtr_tracks "data/mkv/ass_missing_text_in_format.mkv", "2:#{tmp}2 3:#{tmp}3"
+    result = hash_file(tmp + "2") + "-" + hash_file(tmp + "3")
+    File.unlink(tmp + "2")
     File.unlink(tmp + "3")
-    File.unlink(tmp + "4")
 
     return result
   end
